--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,19 +1,54 @@
+@font-face {
+  font-family: 'LobsterRegular';
+  src: local('LobsterRegular'), url(./fonts/Lobster-Regular.ttf) format('truetype');
+}
+
+@font-face {
+  font-family: 'Pacifico';
+  src: local('LobsterRegular'), url(./fonts/Pacifico-Regular.ttf) format('truetype');
+}
+
+@font-face {
+  font-family: 'PatuaOne';
+  src: local('PatuaOne'), url(./fonts/PatuaOne-Regular.ttf) format('truetype');
+}
+
+@font-face {
+  font-family: 'Aleo';
+  src: local('Aleo'), url(./fonts/Aleo-Regular.ttf) format('truetype');
+}
+
+@font-face {
+  font-family: 'Roboto';
+  src: local('Roboto'), url(./fonts/Roboto-Medium.ttf) format('truetype');
+}
+
+@font-face {
+  font-family: 'Gravity';
+  src: local('Gravity'), url(./fonts/Gravity-Book.otf) format('opentype');
+}
+
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+  font-family: Gravity !important;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.no-margin-bottom {
+  margin-bottom: 0px !important;
 }
 
-.margin-top-80 {
-  margin-top: 80px !important;
+.margin-top-50 {
+  margin-top: 50px !important;
+}
+
+.margin-top-10 {
+  margin-top: 10px !important;
+}
+
+.margin-top-15 {
+  margin-top: 15px !important;
 }
 
 .margin-right-5 {
