--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -39,8 +39,32 @@ body {
   margin-bottom: 0px !important;
 }
 
+.margin-bottom-50 {
+  margin-bottom: 50px !important;
+}
+
+.margin-bottom-100 {
+  margin-bottom: 100px !important;
+}
+
+.margin-bottom-150 {
+  margin-bottom: 150px !important;
+}
+
 .margin-top-50 {
   margin-top: 50px !important;
+}
+
+.margin-top-100 {
+  margin-top: 100px !important;
+}
+
+.margin-top-150 {
+  margin-top: 150px !important;
+}
+
+.margin-top-5 {
+  margin-top: 5px !important;
 }
 
 .margin-top-10 {
