--- a/frontend/src/components/App.css
+++ b/frontend/src/components/App.css
@@ -60,8 +60,8 @@ label {
   justify-content: center;
 }
 
-.flex-gap-10 {
-  gap: 10px;
+.flex-gap-15 {
+  gap: 15px;
 }
 
 /*
@@ -141,8 +141,11 @@ label {
   margin-bottom: 3rem;
 }
 
-.svg-inline--fa {
-  color: white;
+/*
+  Font Awesome
+*/
+.contact-wrapper > a {
+  color: black;
 }
 
 .input-title {
@@ -158,7 +161,7 @@ label {
 }
 
 .card {
-  margin: 1rem 15rem;
+  margin: 1rem 35rem;
   background-color:white !important;
 }
 
@@ -209,6 +212,7 @@ label {
 
 .section-wrapper {
   color: black !important;
+  padding: 0px 10px 10px 10px !important;
 }
 
 .white-text {
