--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,33 +1,3 @@
-/* @font-face {
-  font-family: 'LobsterRegular';
-  src: local('LobsterRegular'), url(./fonts/Lobster-Regular.ttf) format('truetype');
-}
-
-@font-face {
-  font-family: 'Pacifico';
-  src: local('LobsterRegular'), url(./fonts/Pacifico-Regular.ttf) format('truetype');
-}
-
-@font-face {
-  font-family: 'PatuaOne';
-  src: local('PatuaOne'), url(./fonts/PatuaOne-Regular.ttf) format('truetype');
-}
-
-@font-face {
-  font-family: 'Aleo';
-  src: local('Aleo'), url(./fonts/Aleo-Regular.ttf) format('truetype');
-}
-
-@font-face {
-  font-family: 'Roboto';
-  src: local('Roboto'), url(./fonts/Roboto-Medium.ttf) format('truetype');
-}
-
-@font-face {
-  font-family: 'Gravity';
-  src: local('Gravity'), url(./fonts/Gravity-Book.otf) format('opentype'); */
-/* } */
-
 body {
   margin: 0;
   font-family: -apple-system,system-ui,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif;
@@ -69,6 +39,10 @@ body {
 
 .margin-top-10 {
   margin-top: 10px !important;
+}
+
+.margin-bottom-20 {
+  margin-bottom: 20px !important;
 }
 
 .margin-top-15 {
