--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -49,6 +49,14 @@ body {
   margin-top: 15px !important;
 }
 
+.margin-bottom-10 {
+  margin-bottom: 10px !important;
+}
+
+.margin-bottom-15 {
+  margin-bottom: 15px !important;
+}
+
 .margin-right-5 {
   margin-right: 5px !important;
 }
