--- a/frontend/src/components/App.css
+++ b/frontend/src/components/App.css
@@ -77,8 +77,15 @@ label {
   background: cadetblue;
 }
 
+a {
+  -moz-transition: 0.3s;
+  -webkit-transition: 0.3s;
+  transition: 0.1s;
+}
+
 a:hover {
   color: orange !important;
+  transform: scale(1.1);
 }
 
 /*
@@ -156,6 +163,13 @@ a:hover {
 */
 .contact-wrapper > a {
   color: black;
+  -moz-transition: 0.3s;
+  -webkit-transition: 0.3s;
+  transition: 0.1s;
+}
+
+.contact-wrapper > a:hover {
+  transform: scale(1.3);
 }
 
 .input-title {
